--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "async": "^2.5.0",
     "connect-mongo": "1.3.2",
     "cookie-parser": "1.4.3",
     "dotenv": "4.0.0",
